[gd_scene load_steps=7 format=3 uid="uid://ddn3gi1k5ock8"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_wxbg3"]
[ext_resource type="Script" path="res://scripts/camera_control.gd" id="2_bbeqo"]
[ext_resource type="Script" path="res://scripts/movement.gd" id="4_vms48"]
[ext_resource type="PackedScene" uid="uid://bkwu42a4cxmea" path="res://scenes/gunstetstscn.tscn" id="5_pesc3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_psx23"]

[sub_resource type="PlaceholderMesh" id="PlaceholderMesh_1b80v"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_wxbg3")

[node name="Movement" type="Node3D" parent="."]
script = ExtResource("4_vms48")

[node name="ColliderBody" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_psx23")

[node name="TwistPivot" type="Node3D" parent="."]
script = ExtResource("2_bbeqo")

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]

[node name="CameraController" type="Node3D" parent="TwistPivot/PitchPivot"]

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot/CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 2, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="TwistPivot/PitchPivot/CameraController/Camera3D"]
mesh = SubResource("PlaceholderMesh_1b80v")

[node name="MeshInstance3D2" parent="TwistPivot/PitchPivot/CameraController/Camera3D/MeshInstance3D" instance=ExtResource("5_pesc3")]
transform = Transform3D(-2.18557e-09, 0, 0.05, 0.00809397, 0.0493405, 3.53799e-10, -0.0493405, 0.00809397, -2.15674e-09, 0.411226, -0.244954, -0.693282)
skeleton = NodePath("../..")
